GoalTracker/force-app/main/default/objects/Community_Announcement__c/Community_Announcement__c.object-meta.xml
<CustomObject>
    <description>Scheduled announcements to surface in Lightning Communities.</description>
    <label>Community Announcement</label>
    <nameField>
        <label>Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>