GoalTracker/force-app/main/default/objects/Community_Announcement__c/fields/Announcement_URL__c.field-meta.xml
<CustomField>
    <fullName>Announcement_URL__c</fullName>
    <description>The URL the user is taken to when clicking on the call to action text.</description>
    <inlineHelpText>The URL the user is taken to when clicking on the call to action text.</inlineHelpText>
    <label>Announcement URL</label>
    <type>Url</type>
</CustomField>