GoalTracker/force-app/main/default/objects/Community_Announcement__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Date and time to stop showing this announcement in the community.</description>
    <inlineHelpText>Date and time to stop showing this announcement in the community.</inlineHelpText>
    <label>End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>